자바스크립트(Basic) 8-1 ~ 10-2, 선언함수,가변인자,전역변수,지역변수,클로저,객체

--- a/Javascript/script11.html
+++ b/Javascript/script11.html
@@ -18,7 +18,17 @@
             return sum;
         }
 
-        console.log( func1(10) )
+        function func2(x, y){
+            return x+y;
+        }
+
+        var func3 = function(x,y,z){
+            return x+y+z;
+        }
+
+        console.log (func1(10) );
+        console.log( func2(10, 20) );
+        console.log( func3(10, 20, '안녕') );
 
     </script>
 </body>
