--- a/Javascript/04node_add_delete/script05(노드순서변경).html
+++ b/Javascript/04node_add_delete/script05(노드순서변경).html
@@ -71,8 +71,8 @@
                 alert("마지막 행입니다.");
                 return;
             }
-            table.insertBefore(next, current);              //insertBefore(기준이 되는 노드,다음으로 올 노드)
-        }                                                   //선택된 노드의 다음이 기준이므로 down 버튼 클릭시 선택된 노드가 밑으로 내려가게됨
+            table.insertBefore(next, current);              //insertBefore(삽입할 노드,기준이되는 노드)
+        }                                                   
 
         function up(node){
 
